--- a/index.html
+++ b/index.html
@@ -6,4 +6,5 @@
 <body>
 
 
-<h1 style="font-size:300%;"><center><a href="https://www.paypal.me/SIothie">GIVE ME MONEY</center></h1></a>
+<h1 style="font-size:300%;"><center><a href="https://www.twitch.tv/drsloth">GIVE ME MONEY</center></h1></a>
+<center><img src="https://tenor.com/view/griddy-fortnite-dance-gif-26319448.gif"></center>
